Fix issue where csv wasnt reading from the data folder

--- a/king_county_data.ipynb
+++ b/king_county_data.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('kc_house_data_train.csv')"
+    "df = pd.read_csv('data/kc_house_data_train.csv')"
    ]
   },
   {
@@ -681,7 +681,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fc6fc280b50>"
+       "<matplotlib.collections.PathCollection at 0x7fc2e5a1eb20>"
       ]
      },
      "execution_count": 9,
@@ -713,7 +713,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fc6fc51e790>"
+       "<matplotlib.collections.PathCollection at 0x7fc2e5ce0160>"
       ]
      },
      "execution_count": 10,
@@ -745,7 +745,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fc6fc579400>"
+       "<matplotlib.collections.PathCollection at 0x7fc2e5ecc580>"
       ]
      },
      "execution_count": 11,
@@ -777,7 +777,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fc6fc7eb130>"
+       "<matplotlib.collections.PathCollection at 0x7fc2e5efc190>"
       ]
      },
      "execution_count": 12,
@@ -832,7 +832,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fc6fcb6f0d0>"
+       "<matplotlib.collections.PathCollection at 0x7fc2e4d39220>"
       ]
      },
      "execution_count": 14,
@@ -1316,7 +1316,7 @@
        "  <th>Date:</th>             <td>Fri, 12 Mar 2021</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>11:49:17</td>     <th>  Log-Likelihood:    </th> <td>-2.3241e+05</td>\n",
+       "  <th>Time:</th>                 <td>12:10:31</td>     <th>  Log-Likelihood:    </th> <td>-2.3241e+05</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td> 17290</td>      <th>  AIC:               </th>  <td>4.650e+05</td> \n",
@@ -1672,7 +1672,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.800\n",
        "Method:                 Least Squares   F-statistic:                     685.2\n",
        "Date:                Fri, 12 Mar 2021   Prob (F-statistic):               0.00\n",
-       "Time:                        11:49:17   Log-Likelihood:            -2.3241e+05\n",
+       "Time:                        12:10:31   Log-Likelihood:            -2.3241e+05\n",
        "No. Observations:               17290   AIC:                         4.650e+05\n",
        "Df Residuals:                   17188   BIC:                         4.658e+05\n",
        "Df Model:                         101                                         \n",
@@ -20009,7 +20009,7 @@
     {
      "data": {
       "text/plain": [
-       "SelectKBest(k=100, score_func=<function f_regression at 0x7fc6f9c29f70>)"
+       "SelectKBest(k=100, score_func=<function f_regression at 0x7fc2e4529f70>)"
       ]
      },
      "execution_count": 52,
